--- a/src/routes/styles.module.scss
+++ b/src/routes/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  flex: 1;
+  height: 100%;
 
   .header {
     width: 100%;
@@ -9,9 +9,7 @@
   .content {
     flex: 1;
     gap: var(--spacing-primary);
-    justify-content: flex-start;
-    align-items: flex-start;
     padding: var(--spacing-primary);
-    flex-direction: column;
+    overflow: auto;
   }
 }
