fix: Tanstack devtools displaying incorrectly

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,8 +16,8 @@
     thead,
     tbody,
     tfoot,
-    .TanStackRouterDevtools,
-    .TanStackRouterDevtools *
+    footer,
+    footer *
   ) {
   padding: 0;
   margin: 0;
