--- a/src/routes/styles.module.scss
+++ b/src/routes/styles.module.scss
@@ -1,4 +1,10 @@
 .container {
   width: 100%;
   height: 100%;
+  align-items: center;
+
+  .content {
+    width: 100%;
+    max-width: 1400px;
+  }
 }
