--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,31 +1,10 @@
 .container {
-  width: 100%;
-  align-items: center;
-
   .content {
     width: 100%;
-    height: 100%;
     max-width: 1400px;
+    padding-inline: vars.$spacing-primary * 2;
     padding-block: vars.$spacing-primary;
-  }
-}
-
-.pageNotFound {
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-
-  .pageNotFoundCode {
-    font-size: 50px;
-    color: vars.$color-text-secondary;
-  }
-
-  .pageNotFoundMessage {
-    font-size: 40px;
-  }
-
-  .pageNotFoundButton {
-    margin-top: vars.$spacing-primary * 2;
-    font-size: 25px;
+    margin-inline: auto;
+    gap: vars.$spacing-primary;
   }
 }
