refactor: rewrite subscribeToCollection function so it's much cleaner to cleanup

--- a/src/pages/habitsPage/habitsMonth/styles.module.scss
+++ b/src/pages/habitsPage/habitsMonth/styles.module.scss
@@ -37,6 +37,14 @@
       justify-content: center;
       align-items: center;
       color: vars.$color-text-secondary;
+
+      .dayOfMonthLetter {
+        color: vars.$color-text-tertiary;
+        font-size: 12px;
+      }
+
+      .dayOfMonthNumber {
+      }
     }
 
     .dayOfMonthDisabled {
