feat: habitDays can be deleted

--- a/src/pages/habitsPage/habitsMonth/components/habitsMonthHeader/styles.module.scss
+++ b/src/pages/habitsPage/habitsMonth/components/habitsMonthHeader/styles.module.scss
@@ -3,7 +3,7 @@
   padding-left: 110px;
   margin-left: vars.$spacing-primary;
   gap: vars.$spacing-primary;
-  cursor: pointer;
+  //   cursor: pointer;
   user-select: none;
 
   .headingMonth {
