--- a/src/pages/habitsPage/habitsMonth/components/habitsMonthHeader/styles.module.scss
+++ b/src/pages/habitsPage/habitsMonth/components/habitsMonthHeader/styles.module.scss
@@ -23,6 +23,10 @@
   padding-left: calc(110px + vars.$spacing-primary);
   flex: 1;
 
+  .currentDayOfMonth {
+    outline: 2px solid rgb(34, 100, 167);
+  }
+
   .dayOfMonth {
     font-size: 13px;
     aspect-ratio: 1;
