--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,3 +1,10 @@
+.backButton {
+  position: absolute;
+  top: vars.$spacing-primary;
+  left: vars.$spacing-primary;
+  z-index: 1;
+}
+
 .container {
   .content {
     width: 100%;
