feat: can pass buttons into MainLayout

--- a/src/layouts/mainLayout/styles.module.scss
+++ b/src/layouts/mainLayout/styles.module.scss
@@ -13,9 +13,10 @@
     .heading {
       font-size: vars.$font-size-heading;
     }
+  }
 
-    .content {
-      padding: vars.$spacing-primary;
-    }
+  .content {
+    padding: vars.$spacing-primary;
+    gap: vars.$spacing-primary;
   }
 }
