feat: layout and design improvements to TasksPage

--- a/src/pages/tasksPage/styles.module.scss
+++ b/src/pages/tasksPage/styles.module.scss
@@ -1,5 +1,7 @@
-.container {
-  flex-direction: column;
+.tasks {
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: vars.$spacing-primary;
 }
 
 .addButton {
