--- a/src/components/formField/components/formFieldLabel/styles.module.scss
+++ b/src/components/formField/components/formFieldLabel/styles.module.scss
@@ -6,20 +6,19 @@
 
 .titleContainer {
   flex-direction: row;
-  gap: vars.$spacing-tertiary;
+  // gap: vars.$spacing-tertiary;
   align-items: center;
   justify-content: center;
   max-width: 100%;
 
   .title {
     display: inline-block;
-    font-size: vars.$font-size-heading;
     flex-direction: row;
     align-items: center;
     gap: vars.$spacing-tertiary;
     overflow: hidden;
     text-overflow: ellipsis;
-    // margin-bottom: 2px;
+    // margin-bottom: -2px;
 
     @media (min-width: vars.$breakpoint-small) {
       // max-width: calc(100% - vars.$font-size-body);
