--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -8,6 +8,7 @@ $roundness: 4px;
 $layout-header-height: 4rem;
 $layout-navbar-width: 275px;
 $line-height: 1.6;
+$input-height: 44px;
 $max-width: var(--max-width);
 
 /* Typography */
