feat: can check and uncheck tasks

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -12,7 +12,7 @@
   }
 
   .icon {
-    font-size: calc(vars.$font-size-body + (vars.$spacing-primary / 2));
+    font-size: vars.$icon-size-large;
   }
 
   .primaryIcon {
