--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -24,7 +24,7 @@ $font-size-body: 1.6rem;
 $font-size-body2: 1.4rem;
 
 /* Icons */
-$icon-size-large: 2rem;
+$icon-size-large: 2.25rem;
 $icon-size-medium: 1.75rem;
 $icon-size-small: 1.5rem;
 
@@ -38,8 +38,8 @@ $active-brightness-filter: 1.1;
 $disabled-brightness-filter: 0.7;
 
 /* Colors */
-$color-primary: rgb(23, 95, 158);
-$color-primary-hover: rgb(40, 120, 190);
+$color-primary: rgb(85, 34, 166);
+$color-primary-hover: rgb(97, 39, 191);
 $color-secondary: rgb(60, 60, 60);
 $color-secondary-hover: rgb(60, 60, 60);
 $color-danger: rgb(220, 20, 20);
@@ -54,9 +54,9 @@ $shadow: 0px 4px 6px rgba(10, 7, 7, 0.5);
 $color-background-translucent: rgba(0, 0, 0, 0.5);
 $color-background-translucent-light: rgba(0, 0, 0, 0.25);
 
-$color-background: rgba(25, 25, 25);
-$color-surface: rgba(35, 35, 35);
-$color-surface2: rgba(50, 50, 50);
+$color-background: rgb(18, 18, 18);
+$color-surface: rgb(30, 30, 30);
+$color-surface2: rgb(28, 30, 36);
 $color-surface3: rgba(65, 65, 65);
 $color-surface4: rgba(80, 80, 70);
 $color-surface5: rgba(95, 95, 95);
