--- a/src/pages/tasksPage/components/taskItem/styles.module.scss
+++ b/src/pages/tasksPage/components/taskItem/styles.module.scss
@@ -5,10 +5,13 @@
   flex: 1;
   min-width: fit-content;
   gap: vars.$spacing-primary;
+  flex-direction: row;
+  align-items: center;
 
   .header {
     flex-direction: row;
     align-items: center;
+    flex: 1;
 
     .text {
       flex: 1;
@@ -24,17 +27,27 @@
       }
     }
 
-    .deleteButton {
-      align-self: flex-start;
+    .textComplete {
+      color: vars.$color-text-secondary;
     }
 
-    .deleteButtonIcon {
-      font-size: vars.$icon-size-medium;
+    .checkButton {
+    }
+
+    .deleteButton {
+      align-self: flex-start;
+      margin-left: auto;
+    }
+
+    .buttonIcon {
+      font-size: vars.$icon-size-large;
     }
   }
 
   .dueDate {
     color: vars.$color-text-secondary;
+    font-size: vars.$font-size-body2;
+    line-height: 0.75;
     // background-color: vars.$color-primary;
     // background-color: vars.$color-surface2;
     // border-radius: vars.$roundness;
