--- a/src/pages/tasksPage/components/taskItem/styles.module.scss
+++ b/src/pages/tasksPage/components/taskItem/styles.module.scss
@@ -4,7 +4,7 @@
   border-radius: vars.$roundness;
   flex: 1;
   min-width: fit-content;
-  overflow: hidden;
+  // overflow: hidden;
 
   .row {
     flex-direction: row;
@@ -39,13 +39,13 @@
     color: vars.$color-text-secondary;
     font-size: vars.$font-size-body2;
     flex: 1;
-    margin-top: 2px;
+    // margin-top: 2px;
   }
 
   .priority {
     background-color: vars.$color-primary;
     padding-inline: vars.$spacing-secondary;
-    padding-block: vars.$spacing-tertiary / 2;
+    padding-block: calc(vars.$spacing-tertiary / 2);
     border-radius: vars.$roundness;
     color: text;
     position: absolute;
