feat: can search for books by isbn, gets info automatically, and can edit books

--- a/src/pages/booksPage/components/bookItem/styles.module.scss
+++ b/src/pages/booksPage/components/bookItem/styles.module.scss
@@ -17,11 +17,20 @@
     }
   }
 
-  .infoName {
-    font-size: vars.$font-size-heading;
-  }
+  .content {
+    flex: 1;
+    flex-direction: row;
 
-  .infoGenre {
-    color: vars.$color-text-secondary;
+    .info {
+      flex: 1;
+
+      .infoTitle {
+        font-size: vars.$font-size-heading;
+      }
+
+      .infoSub {
+        color: vars.$color-text-secondary;
+      }
+    }
   }
 }
