--- a/src/pages/booksPage/components/bookEditor/styles.module.scss
+++ b/src/pages/booksPage/components/bookEditor/styles.module.scss
@@ -1,22 +1,31 @@
 .container {
-  padding: vars.$spacing-primary;
-  gap: vars.$spacing-primary;
-  width: 800px;
-  max-width: 100%;
+  .content {
+    gap: vars.$spacing-primary;
+  }
 
   .row {
     flex-direction: row;
     gap: vars.$spacing-primary;
     align-items: flex-end;
     justify-content: stretch;
-    margin-bottom: vars.$spacing-primary * 2;
+    margin-bottom: vars.$spacing-primary;
 
     .inputText {
       flex: 1;
     }
   }
 
-  .saveButton {
-    margin-top: vars.$spacing-primary * 2;
+  .buttons {
+    flex-direction: row;
+    margin-top: calc(vars.$spacing-primary * 3);
+    gap: vars.$spacing-primary;
+
+    .deleteButton {
+      flex: 0.5;
+    }
+
+    .createButton {
+      flex: 1;
+    }
   }
 }
