--- a/src/layouts/mainLayout/styles.module.scss
+++ b/src/layouts/mainLayout/styles.module.scss
@@ -13,6 +13,10 @@
       padding: vars.$spacing-primary;
       gap: vars.$spacing-primary;
       align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+      background-color: vars.$color-background;
 
       .heading {
         font-size: vars.$font-size-heading;
