--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -55,6 +55,7 @@ $color-background-translucent: rgba(0, 0, 0, 0.5);
 $color-background-translucent-light: rgba(0, 0, 0, 0.25);
 
 $color-background: rgb(15, 15, 15);
+$color-background-translucent: rgb(15, 15, 15, 0.9);
 $color-surface: rgb(25, 25, 25);
 $color-surface2: rgb(40, 40, 40);
 $color-surface3: rgba(65, 65, 65);
