feat: implement TheMovieDV api and multiple minor fixes/changes

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -60,6 +60,10 @@
   }
 }
 
+.transparent {
+  background-color: transparent;
+}
+
 .containerIconOnly {
   padding: calc(vars.$spacing-primary / 1.2);
   justify-content: center;
